--- a/templates/product.liquid
+++ b/templates/product.liquid
@@ -1,3 +1,4 @@
+{%- include 'bold-product' with product, hide_action: 'break', output: 'none' -%}
 <script text="text/javascript">
   var _learnq = _learnq || [];
 
@@ -78,6 +79,7 @@
   },
   "offers": [
     {%- for variant in product.variants -%}
+{%- include 'bold-variant' with variant, hide_action: 'skip' -%}
       {
         "@type" : "Offer",
         {%- if variant.sku != blank -%}
