--- a/sections/collection-template.liquid
+++ b/sections/collection-template.liquid
@@ -102,6 +102,7 @@
                           <option value="">{{ 'collections.filters.all_tags' | t }}</option>
                         {% endif %}
                         {% for tag in collection.all_tags %}
+{%- if tag contains '_HIDDEN_PRODUCT' -%}{%- continue -%}{%- endif -%}
                           <option value="/collections/{% if collection.handle != blank %}{{ collection.handle }}{% else %}all{% endif %}/{{ tag | handleize }}"{% if current_tags contains tag %} selected="selected"{% endif %}>{{ tag }}</option>
                         {% endfor %}
                       </select>
@@ -122,6 +123,7 @@
                       data-default-sortby="{{ collection.default_sort_by }}"
                     >
                       {%- for option in collection.sort_options -%}
+{%- include 'bold-product' with option, hide_action: 'skip' -%}
                         <option value="{{ option.value }}" {% if option.value == sort_by %}selected="selected"{% endif %}>{{ option.name }}</option>
                       {%- endfor -%}
                     </select>
@@ -155,6 +157,7 @@
 
       <ul class="grid grid--uniform{% if collection.products_count > 0 %} grid--view-items{% endif %}">
         {% for product in collection.products %}
+{%- include 'bold-product' with product, hide_action: 'skip' -%}
           <li class="grid__item grid__item--{{section.id}} {{ grid_item_width }}">
             {% include 'product-card-grid', max_height: max_height %}
           </li>
@@ -194,6 +197,7 @@
     {% else %}
       <ul class="list-view-items">
         {% for product in collection.products %}
+{%- include 'bold-product' with product, hide_action: 'skip' -%}
           <li class="list-view-item">
             {% include 'product-card-list', product: product %}
           </li>
