--- a/sections/featured-product.liquid
+++ b/sections/featured-product.liquid
@@ -176,6 +176,7 @@
 
                 <select name="id" id="ProductSelect-{{ section.id }}" class="product-form__variants no-js">
                   {% for variant in product.variants %}
+{%- include 'bold-variant' with variant, hide_action: 'skip' -%}
                     {% if variant.available %}
                       <option {% if variant == product.selected_or_first_available_variant %} selected="selected" {% endif %} value="{{ variant.id }}">
                         {{ variant.title }}
@@ -286,6 +287,7 @@
   },
   "offers": [
     {%- for variant in product.variants -%}
+{%- include 'bold-variant' with variant, hide_action: 'skip' -%}
       {
         "@type" : "Offer",
         {%- if variant.sku != blank -%}
