style: updated mouse-over graphic to higher res

--- a/assets/theme.scss.liquid
+++ b/assets/theme.scss.liquid
@@ -6927,10 +6927,10 @@ $toolbar-height-small: 46px;
 a.grid-view-item__link,
 .image-bar,
 .rap__med__wrap__inside {
-  cursor: url('https://cdn.shopify.com/s/files/1/0260/5894/8682/files/MC_mouse_BW_face_1x_217b0d44-22f4-4534-bf94-b10bc744e63b.png?v=1569367628'), auto;
+  cursor: url('https://cdn.shopify.com/s/files/1/0260/5894/8682/files/MC_mouse_BW_face-2_1x_fba3b490-2bf6-4d2d-a31b-73b070130b09.png?v=1570210337'), auto;
   cursor: -webkit-image-set(
-    url('https://cdn.shopify.com/s/files/1/0260/5894/8682/files/MC_mouse_BW_face_1x_217b0d44-22f4-4534-bf94-b10bc744e63b.png?v=1569367628') 1x,
-    url('https://cdn.shopify.com/s/files/1/0260/5894/8682/files/MC_mouse_BW_face_2x_d2e68fd4-d009-4761-a887-90f522ba8b42.png?v=1569367670"') 2x
+    url('https://cdn.shopify.com/s/files/1/0260/5894/8682/files/MC_mouse_BW_face-2_1x_fba3b490-2bf6-4d2d-a31b-73b070130b09.png?v=1570210337') 1x,
+    url('https://cdn.shopify.com/s/files/1/0260/5894/8682/files/MC_mouse_BW_face-2_2x_7eeccc8a-95d4-4b7b-8a33-45c86ce68c31.png?v=1570210371') 2x
   ), auto;
 }
 
